<resources>
    <string name="app_name">Chakma Dictionary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="defination_string">This the the body of the defination. The word will be defined in this part the screen and I know it will be fine to define here because its me</string>
    <string name="exampleSentenceOne">"Always use the right word for the right situation" <br /> "Words when chosen carefully can be powerful"</string>
    <string name="search_hint">Search the dictionary</string>

    <string name="about_text">Chakma Dictionary translates Chakma words in english letters to their corresponding english words.
    Apart from just translating, it also provides definition of the word along with examples for both the chakma word and the corresponding english word.
    The purpose of this dictionary application is to preserve the chakma language and help people of the chakma community remain in touch with their language.
    Many if not most of the students have to go out of state to pursue quality education and because of that they lose touch with their language and community.
    The gap between the chakma people and their language is increasing and people are slowly starting to forget words that they once knew as a child.
    We hope that this application will shrink the increasing gap between the chakma people and the chakma language up to some extent and, also help non-chakma people
    learn chakma words and their meaning.</string>

    <string name="about_ps">P.S. : This app is by no means complete. Due to the lack of a physical dictionary with all the chakma words in it, the team itself has to generate the words and add them
    to the application\'s database slowly. It is a difficult and time consuming task considering the vast number of words. Therefore, we apologize in advance if you encounter any
    inconvenience with regards to finding words or with other issues. The team will do it\'s best to provide you with the words that you desire to learn.</string>
    <string name="about_header">ABOUT</string>
    <string name="quote_example">\"Thousands of candles can be lit from a single candle, and the life of the candle will not be shortened. Happiness never decreases by being shared.\" \n \n - Buddha</string>


    //Dialog
    <string name="dialog_title">Confirm Delete</string>
    <string name="dialog_content_history">Are you sure you want to delete the entire history?</string>
    <string name="dialog_content_bookmark">Are you sure you want to delete all the bookmarks?</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_decline">Decline</string>
    <string name="no_history_items_found_content_desc">No history items found</string>
    <string name="deletes_the_entire_history_description">Deletes the entire history</string>


    //DefinitionFragment
    <string name="english_label">English:</string>
    <string name="definition_label_string">Definition:</string>
    <string name="example_in_english_string">Example in english:</string>
    <string name="example_in_chakma_string">Example in chakma:</string>
    <string name="deletes_the_entire_history_desc_string">Deletes the entire history</string>
    <string name="chakma_dictionary_image_desc">Chakma Dictionary</string>
    <string name="chakma_dictionary_label_string">Chakma Dictionary</string>
    <string name="home_drawer">Home</string>
    <string name="history_drawer">History</string>
    <string name="bookmarks_drawer">Bookmarks</string>
    <string name="about_drawer">About</string>
    <string name="settings_drawer">Settings</string>
    <string name="exit_drawer">Exit</string>
    <string name="synonyms_text">Synonyms:</string>
    <string name="delete_history_item_content_desc">delete history item</string>
    <string name="delete_bookmark_item_content_desc">delete bookmark item</string>


    <string-array name="ItemsArrayEntries">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    <string-array name="ItemsArrayValues">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>

    <string-array name="themeArrayEntries">
        <item>Default</item>
        <item>Cream</item>
        <item>Purple</item>
        <item>Dark</item>
        <item>Blue</item>
    </string-array>

    <string-array name="themeArrayValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="quizCategoryEntries">
        <item>All</item>
        <item>History</item>
        <item>Bookmark</item>
    </string-array>
    <string-array name="quizCategoryValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="searchPriorityEntries">
        <item>English</item>
        <item>Chakma</item>
    </string-array>
    <string-array name="searchPriorityValues">
        <item>0</item>
        <item>1</item>
    </string-array>



    <string name="banner_ad_unit_id">ca-app-pub-7471620086159535/8843483526</string>
    <string name="banner_ad_unit_id_2">ca-app-pub-7471620086159535/2303245463</string>
    <string name="images_of_items_corresponding_to_the_word">Images of items corresponding to the word</string>
    <string name="images_label">Images:</string>
    <string name="eg_there_is_a_mistake_in_the_word_love_the_right_translation_is_hospana">eg: there is a mistake in the word \'love\', the right translation is hospana</string>


</resources>