<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/welcomeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_drawer"/>

    <item
        android:id="@+id/historyFragment"
        android:title="@string/history_drawer"
        android:icon="@drawable/ic_baseline_history_24"/>
    <item
        android:id="@+id/bookmarkFragment"
        android:title="@string/bookmarks_drawer"
        android:icon="@drawable/ic_baseline_bookmarks_24"/>
    <item
        android:id="@+id/aboutFragment"
        android:title="@string/about_drawer"
        android:icon="@drawable/ic_baseline_article_24"/>
    <item
        android:id="@+id/mySettingsFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings_drawer" />
    <item
        android:id="@+id/exit_item"
        android:title="@string/exit_drawer"
        android:icon="@drawable/ic_baseline_exit_to_app_24"/>
</menu>