<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.about.AboutFragment"
            >

            <!-- TODO: Update blank fragment layout -->

            <TextView
                android:id="@+id/aboutHeader"
                app:layout_constrainedHeight="true"
                app:layout_constrainedWidth="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:textStyle="bold"
                android:text="@string/about_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/aboutBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constrainedHeight="true"
                app:layout_constrainedWidth="true"
                android:padding="10dp"
                android:text="@string/about_text"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aboutHeader" />

            <TextView
                android:id="@+id/psAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constrainedHeight="true"
                app:layout_constrainedWidth="true"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:text="@string/about_ps"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aboutBody"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginBottom="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>